ADO-13865 Accordion Arrow Fixes - Make arrow centre-aligned with a 16px top margin at small breakpoints - Decrease the size of the Accordion header font from 1.5x to 1.25x for   small breakpoints
🎨

ADO LINK:https://dev.azure.com/AMA-Ent/AMA-Ent/_workitems/edit/13865

--- a/app/assets/stylesheets/v3/layout_components/accordions.scss
+++ b/app/assets/stylesheets/v3/layout_components/accordions.scss
@@ -76,8 +76,16 @@
       display: block;
       margin: 0 auto;
       text-align: center;
-      float: right;
-      margin-right: 1rem;
+      margin-right: $base-margin;
+
+      @include breakpoint(medium up) {
+        float: right;
+      }
+
+      @include breakpoint(small only) {
+        margin-top: $base-margin;
+      }
+
     }
 
     &:hover,
@@ -89,10 +97,11 @@
 
   &__heading {
     text-align: center;
-    font-size: $base-font-size*1.5;
+    font-size: $base-font-size*1.25;
     color: $dark-grey-text;
 
     @include breakpoint(medium) {
+      font-size: $base-font-size*1.5;
       text-align: left;
       display: inline-block;
     }
